# Recording-And-Analysis-Plugin

./: .gitignore  CMakeLists.txt
Analysis/: GazeAnalysis.cpp  GetTransformsForGazeAnalysis.cpp
AnalysisTest/: Test.cpp
Convert/: Convert.cpp  ConvertBatch.cpp
Python/: GazeClassification.ipynb  GazeClassificationPostProcessing.ipynb  GazeClassification_VFOALib.ipynb  GazeStateAnalysis.ipynb  GazeStatisticalAnalysis.ipynb  README.md  VisualizeGazeIntervals.ipynb  VisualizeHeadRotation.ipynb  get_tcm.py  helpers.py
Python/.ipynb_checkpoints/: GazeClassification-checkpoint.ipynb  GazeClassificationPostProcessing-checkpoint.ipynb  GazeClassification_VFOALib-checkpoint.ipynb  GazeStateAnalysis-checkpoint.ipynb  GazeStatisticalAnalysis-checkpoint.ipynb  VisualizeGazeIntervals-checkpoint.ipynb  VisualizeHeadRotation-checkpoint.ipynb
Python/vfoa/utils/: geometry.py
Src/Analysis/: AnalysisEndpoints.cpp  AnalysisManager.cpp  AnalysisManager.h
Src/Analysis/IntervalAnalysis/TransformAnalysis/: IntervalGazeAnalysisRequest.cpp
Src/Analysis/QuantitativeAnalysis/TransformAnalysis/: QuantitativeGazeAnalysisRequest.cpp  QuantitativePoseRetrievalRequest.cpp  QuantitativePoseRetrievalRequest.h  QuantitativeRotationAnalysisRequest.cpp  QuantitativeRotationRetrievalRequest.cpp  QuantitativeRotationRetrievalRequest.h
Src/Recording/: MetaInformation.cpp  MetaInformation.h
Src/Recording/Generic/: GenericData.h
Src/Recording/Sound/: SoundData.h
Src/Recording/Transform/: TransformData.h
Utils/: Utils.cpp  Utils.h
